Update README.ipynb and add logo

--- a/README.ipynb
+++ b/README.ipynb
@@ -4,12 +4,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "AutoDL starting kit\n",
-    "======================================\n",
+    "<div><img src=\"logo.png\", width=220, ALIGN=\"left\", border=20></div>\n",
+    "<h1>AutoDL Starting Kit </h1>\n",
+    "\n",
+    "\n",
+    "<br>This code was tested with <br>\n",
+    "Python 3.6.6 |Anaconda custom (64-bit)| (default, Jun 28 2018, 11:07:29) (https://anaconda.org/)<br>\n",
+    "<br>\n",
+    "</center>\n",
+    "<p>\n",
     "\n",
     "ALL INFORMATION, SOFTWARE, DOCUMENTATION, AND DATA ARE PROVIDED \"AS-IS\".\n",
     "UNIVERSITE PARIS SUD, INRIA, CHALEARN, AND/OR OTHER ORGANIZERS\n",
     "OR CODE AUTHORS DISCLAIM ANY EXPRESSED OR IMPLIED WARRANTIES.\n",
+    "\n",
+    "<br>\n",
     "\n",
     "## Download This Starting Kit\n",
     "\n",
