--- a/Tutorial_final.ipynb
+++ b/Tutorial_final.ipynb
@@ -667,7 +667,7 @@
    "metadata": {},
    "source": [
     "<font color='red'>\n",
-    "You don't need to write from scratch, but can instead follow our provided baseline model Basically, you need to write three functions: (these functions can be found in <code>model.py</code>)\n",
+    "You don't need to write from scratch, but can instead follow our provided baseline model. Basically, you need to write three functions: (these functions can be found in <code>model.py</code>)\n",
     "\n",
     "- <code>preprocess_tensor_4d</code> (optional) for preprocessing data, e.g. resize, change gray images to RGB images\n",
     "- <code>input_function</code> (optional) for reading batchs\n",
