--- a/Tutorial_final.ipynb
+++ b/Tutorial_final.ipynb
@@ -67,7 +67,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<font color='red'>Let's start with a sample dataset miniciao, which can be found in <code>./AutoDL_sample_data/miniciao</code></font>"
+    "<font color='red'>Let's start with a sample dataset miniciao, which can be found in <code>./AutoDL_sample_data/miniciao</code>"
    ]
   },
   {
@@ -167,14 +167,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<font color='red'>It should be noted that:\n",
+    "<font color='red'>\n",
+    "It should be noted that:\n",
     "    \n",
     "- in some datasets, the image shape is not fixed, i.e. some images are larger / smaller, when you get (-1, -1) as tensor size (image size) from meta information, it means that the image shapes are not identical in this dataset.\n",
     "- not all datasets have 3 channels\n",
     "- although this sample datset seems to have only one label for each image, it is not always true for other datsets.\n",
     "\n",
-    "Thus, it depends on you to choose to adapt to different datasets. \n",
-    "</font>"
+    "Thus, it depends on you to choose to adapt to different datasets. "
    ]
   },
   {
@@ -299,7 +299,7 @@
     "    ALC = \\text{trapez}(T, NBAC),\n",
     "\\end{equation*}\n",
     "\n",
-    "where trapez method is used to compute the area under the curve formed by drawing straight lines between consecutive points. This gives the evaluation score used for one task. Later, when ALC score is computed for all tasks, the final score is obtained by the average rank (over all tasks). It should be emphasized that multi-class classification metrics are not being considered, i.e., each class is scored independently. </font>"
+    "where trapez method is used to compute the area under the curve formed by drawing straight lines between consecutive points. This gives the evaluation score used for one task. Later, when ALC score is computed for all tasks, the final score is obtained by the average rank (over all tasks). It should be emphasized that multi-class classification metrics are not being considered, i.e., each class is scored independently."
    ]
   },
   {
@@ -345,8 +345,7 @@
    "metadata": {},
    "source": [
     "<font color='red'>\n",
-    "    It is important that you test your submission files before submitting them. All you have to do to make a submission is modify the file <code>model.py</code> in the <code>AutoDL_sample_code_submission/</code> directory, then run this test to make sure everything works fine. This is the actual program that will be run on the server to test your submission. \n",
-    "</font>"
+    "    It is important that you test your submission files before submitting them. All you have to do to make a submission is modify the file <code>model.py</code> in the <code>AutoDL_sample_code_submission/</code> directory, then run this test to make sure everything works fine. This is the actual program that will be run on the server to test your submission. "
    ]
   },
   {
@@ -658,8 +657,7 @@
    "metadata": {},
    "source": [
     "<font color='red'>\n",
-    "If you run the above cells successfully, congratulations! You are all set! In order to get better score on the challenge, you need to design your model carefully, that can learn better and faster on different datasets.\n",
-    "</font>"
+    "If you run the above cells successfully, congratulations! You are all set! In order to get better score on the challenge, you need to design your model carefully, that can learn better and faster on different datasets."
    ]
   },
   {
@@ -676,7 +674,7 @@
     "For instructions on wrinting <code>model_fn</code>, you are invited to consult this page for reference: \n",
     "https://www.tensorflow.org/guide/custom_estimators#write_a_model_function\n",
     "\n",
-    "Good luck!</font>"
+    "Good luck!"
    ]
   },
   {
